# ollama-configuration

./: .gitignore  01-install-ollama.sh  02-configure-gpu.sh  03-pull-models.sh  04-install-webui.sh  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  commitlint.config.js  package-lock.json  package.json  setup.ps1  setup.sh  toggle-webui-lan.ps1  toggle-webui-lan.sh
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  e2e.yml  launcher-ollama-integration.yml  lint.yml  release.yml  rust-ci.yml  test.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
gui/: README.md
gui/e2e-tests/: package-lock.json  package.json  wdio.conf.js
gui/e2e-tests/test/specs/: wizard.e2e.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
launcher/: README.md
launcher/e2e-tests/: package-lock.json  package.json  wdio.conf.js
launcher/e2e-tests/test/specs/: launcher.e2e.js
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: main.rs
lib/: common.ps1  common.sh
tests/: configure_gpu_vendor.bats  install_ollama.bats  lib_common.bats  pull_models_tier.bats  test_helper.bash  toggle_webui_lan.bats
