[package]
name = "ollama-stack-gui"
version = "0.1.0"
description = "GUI orchestrator for the ollama-configuration install scripts"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "ollama-stack-gui"
path = "src/main.rs"
