[package]
name = "ollama-launcher"
version = "0.1.0"
description = "Daily-use launcher: open Open WebUI and manage local Ollama models"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
url = "2"
local-ip-address = "0.6"

[[bin]]
name = "ollama-launcher"
path = "src/main.rs"
